// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoginLayout renders correctly 1`] = `
<div
  class="css-1m6ek"
>
  <div
    class="css-nf597f"
  >
    <div
      class="css-ee05cj"
    >
      <img
        alt="logo"
        src="iO-logo-black.png"
      />
    </div>
    <div />
  </div>
</div>
`;

exports[`LoginLayout renders correctly with children 1`] = `
<div
  class="css-1m6ek"
>
  <div
    class="css-nf597f"
  >
    <div
      class="css-ee05cj"
    >
      <img
        alt="logo"
        src="iO-logo-black.png"
      />
    </div>
    <div>
      <div>
        test-content
      </div>
    </div>
  </div>
</div>
`;
